--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Varela+Round&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body style="margin:0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
